@@ -86,6 +86,7 @@ struct event_entry_t event_tab[] = {
   { EVENT_POSTUPLOAD, "POSTUPLOAD" },
   { EVENT_PREDOWNLOAD, "PREDOWNLOAD" },
   { EVENT_POSTDOWNLOAD, "POSTDOWNLOAD" },
+  { EVENT_PREMKDIR, "PREMKDIR" },
   { EVENT_MKDIR, "MKDIR" },
   { EVENT_RMDIR, "RMDIR" },
   { EVENT_DELE, "DELE" },
